SP Screen Production/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_Referral_Source__c</fullName>
        <formula>TEXT(Account.AccountSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Referral Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNE- Eastern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE - Inner Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE - Ipswich Urban</fullName>
                </value>
                <value>
                    <fullName>BNE - Logan City</fullName>
                </value>
                <value>
                    <fullName>BNE-Moreton Bay - Rural Region</fullName>
                </value>
                <value>
                    <fullName>BNE-Moreton Bay - Urban Region</fullName>
                </value>
                <value>
                    <fullName>BNE - Northern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE - Redland City</fullName>
                </value>
                <value>
                    <fullName>BNE - Southern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE - Western Suburbs</fullName>
                </value>
                <value>
                    <fullName>CCN-Central Coast</fullName>
                </value>
                <value>
                    <fullName>CCN-Hunter Region</fullName>
                </value>
                <value>
                    <fullName>CCN-Lake Macquarie</fullName>
                </value>
                <value>
                    <fullName>CCN-Newcastle Region</fullName>
                </value>
                <value>
                    <fullName>CCN-Port Stephens</fullName>
                </value>
                <value>
                    <fullName>Coffs_Central</fullName>
                </value>
                <value>
                    <fullName>Coffs_North</fullName>
                </value>
                <value>
                    <fullName>Coffs_NorthWest</fullName>
                </value>
                <value>
                    <fullName>Coffs_South</fullName>
                </value>
                <value>
                    <fullName>Coffs_SouthWest</fullName>
                </value>
                <value>
                    <fullName>SYD: Outer West &amp; Greater Western (Penrith, Blacktown, Richmond)</fullName>
                </value>
                <value>
                    <fullName>SYD Canterbury/Bankstown Area</fullName>
                </value>
                <value>
                    <fullName>SYD -Eastern Suburbs (Bondi)</fullName>
                </value>
                <value>
                    <fullName>SYD -Hills District (Baulkham Hills)</fullName>
                </value>
                <value>
                    <fullName>SYD -Illawarra (Wollongong)</fullName>
                </value>
                <value>
                    <fullName>SYD-Illawarra Shoalhaven (Nowra)</fullName>
                </value>
                <value>
                    <fullName>SYD-Inner City (CBD)</fullName>
                </value>
                <value>
                    <fullName>SYD-Inner West (Newtown/Marrickville)</fullName>
                </value>
                <value>
                    <fullName>SYD-Northern Beaches (Manly)</fullName>
                </value>
                <value>
                    <fullName>SYD - North Shore Upper &amp; Lower &amp; North West (Epping, Ryde, Chatswood, Mosman, Hornsby)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Outstanding_at_Install__c</fullName>
        <label>Balance Outstanding at Install $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_in_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <description>There is a copy of the quote in the office. Please look!</description>
        <label>Copy in Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Deposit_Paid__c</fullName>
        <label>Date Deposit Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Final_Payment__c</fullName>
        <label>Date of Final Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Quote_Variation__c</fullName>
        <label>Date of Quote Variation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid_Amount__c</fullName>
        <label>Deposit Paid Amount $ (50%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick once deposit is paid and receipt is emailed via MYOB to customer every time.</description>
        <label>Deposit Paid (MUST email receipt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diamond_Grille__c</fullName>
        <description>Diamond Grille</description>
        <label>Diamond Grille</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Balance_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Balance Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flyscreen_Retractable__c</fullName>
        <description>Flyscreen Retractable</description>
        <label>Flyscreen Retractable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flyscreen_Window_or_Door__c</fullName>
        <description>Flyscreen Window or Door</description>
        <label>Flyscreen Window or Door</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_Interest_Free_Customer__c</fullName>
        <label>GE Interest Free</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Finance Customer</fullName>
                </value>
                <value>
                    <fullName>6 Month Interest Free Customer</fullName>
                </value>
                <value>
                    <fullName>12 Month Interest Free Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Site_Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Site Acknowledged</description>
        <label>On Site Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Ordered__c</fullName>
        <label>Products Ordered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_code__c</fullName>
        <label>Promo code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Installation_Date__c</fullName>
        <label>Proposed Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Variation_Amount__c</fullName>
        <description>Please add the variation amount only. Not the new total.</description>
        <label>Quote Variation Amount (different month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price: More than was willing to spend (no competitor)</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Timing: Lead times too long</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reminder call</description>
        <label>Reminder call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rockford_Web_Order_Number__c</fullName>
        <description>All web order numbers related to the orders for this opportunity.</description>
        <label>Rockford Web Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Text_Message_reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SMS Text Message reminder</description>
        <label>SMS Text Message reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Doors__c</fullName>
        <description>Security Doors</description>
        <label>Security Doors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Screens__c</fullName>
        <description>Security Screens</description>
        <label>Security Screens</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Comments__c</fullName>
        <description>Site Comments</description>
        <label>Site Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Requests_and_Notes__c</fullName>
        <description>Specific Requests and Notes</description>
        <label>Specific Requests and Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Steel_Door_Windows__c</fullName>
        <description>Steel Door Windows</description>
        <label>Steel Door Windows</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>New_Last_Week</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Site_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>Site_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Job Cancelled Lost after CLOSED WON</value>
        </filters>
        <label>Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Reason_Lost_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>( isblank(Text(Reason_Lost__c))  &amp;&amp;  Text(StageName) == &apos;Closed Lost&apos;)</errorConditionFormula>
        <errorMessage>Reason Lost is mandatory when stage is closed lost.</errorMessage>
    </validationRules>
</CustomObject>